--- a/index.html
+++ b/index.html
@@ -8,5 +8,8 @@
 </head>
 <body>
     <h1>Hello GIT! This is a meesage from GitHub!!</h1>
+    <div>
+        <p>Let's start some JavaScript</p>
+    </div>
 </body>
 </html>
